minor edits on TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -24,7 +24,7 @@ Birth-death processes and FBD
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/fbd_gm}
+\fbox{\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/tikz/fbd_gm}}
 \caption{\small A graphical model of the fossilized birth death process. In this model, the speciation, extinction and fossilization rates are drawn from exponential distributions, while the origin time and fossil ages are uniformly distributed. }
 \label{fig:fbd_gm}
 \end{figure}
