--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -49,7 +49,7 @@ This prior is visualized in Fig. \ref{fig:morpho_gm}.
 \caption{\small A graphical model of the Beta-distributed frequencies across sites model. In this model, stationary state frequencies are drawn from a discrete Beta distribution and used to generate Q-matrices that allow character change asymmetry.}
 \label{fig:morpho_gm}
 \end{figure}
-All of the morphological data we are working with in this tutorial are binary.  
+All of the morphological characters provided in the data matrix for this tutorial are binary.  
 Therefore, we can draw the stationary state frequencies of our 0 and 1 characters from a Beta distribution. 
 Using the stationary state frequencies drawn from the Beta distribution, we can then create new Q-matrices that allow for asymmetrical change in characters states (i.e., for changing from state 0 to state 1 to be more likely than changing from state 1 to state 0, or vice versa). 
 We can do multiple draws from the Beta distribution, creating multiple different Q-matrices per datset.
