--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9329,6 +9329,170 @@ They used a simple NNI for rooted trees},
   Timestamp                = {2015.01.19}
 }
 
+@BOOK{clark1972,
+  title = {Arctoid Genetic Characters as Related to the Genus \emph{{P}arictis}},
+  publisher = {Field Museum of Natural History},
+  year = {1972},
+  author = {Clark, John and Guensburg, Thomas Edgar},
+  volume = {1150},
+  address = {Chicago, Ill.}
+}
+
+@ARTICLE{krause2008,
+  author = {Krause, Johannes and Unger, Tina and No{\c{c}}on, Aline and Malaspinas,
+	Anna-Sapfo and Kolokotronis, Sergios-Orestis and Stiller, Mathias
+	and Soibelzon, Leopoldo and Spriggs, Helen and Dear, Paul H and Briggs,
+	Adrian W and others},
+  title = {Mitochondrial genomes reveal an explosive radiation of extinct and
+	extant bears near the {M}iocene-{P}liocene boundary},
+  journal = {BMC Evolutionary Biology},
+  year = {2008},
+  volume = {8},
+  pages = {220},
+  number = {1},
+  publisher = {BioMed Central Ltd}
+}
+
+@ARTICLE{ginsburg1995,
+  author = {Ginsburg, L and Morales, J},
+  title = {\textit{{Z}aragocyon daamsi n. gen. sp. nov.}, U{}rsidae primitif
+	du {M}ioc{\`e}ne inf{\'e}rieur d'{E}spagne},
+  journal = {Comptes Rendus de l'Acad{\'e}mie des Sciences. S{\'e}rie 2. Sciences
+	de la Terre et des Plan{\`e}tes},
+  year = {1995},
+  volume = {321},
+  pages = {811--815},
+  number = {9},
+  publisher = {Elsevier}
+}
+
+@ARTICLE{abella12,
+  author = {Juan Abella and David M. Alba and Josep M. Robles and Alberto Valenciano
+	and Cheyenn Rotgers and Ra\"ul Carmona and Plinio Montoya and Jorge
+	Morales},
+  title = {\textit{{K}retzoiarctos} gen. nov., the Oldest Member of the Giant
+	Panda Clade},
+  journal = {PLoS One},
+  year = {2012},
+  volume = {17},
+  pages = {e48985}
+}
+
+@ARTICLE{abella2011,
+  author = {Abella, J and Montoya, P and Morales, J},
+  title = {Una nueva especie de \textit{{A}griarctos} ({A}iluropodinae, {U}rsidae,
+	{C}arnivora) en la localidad de {N}ombrevilla 2 ({Z}aragoza, {E}spa{\~n}a)},
+  journal = {Estudios Geol{\'o}gicos},
+  year = {2011},
+  volume = {67},
+  pages = {187--191},
+  number = {2}
+}
+
+
+@INPROCEEDINGS{ginsburg1998,
+  author = {Ginsburg, L{\'e}onard and Morales, Jorge},
+  title = {{Les Hemicyoninae (Ursidae, Carnivora, Mammalia) et les formes apparent{\'e}es
+	du Mioc{\`e}ne inf{\'e}rieur et moyen d'Europe occidentale}},
+  booktitle = {Annales de Pal{\'e}ontologie},
+  year = {1998},
+  volume = {84},
+  number = {1},
+  pages = {71--123},
+  organization = {Elsevier}
+}
+
+@ARTICLE{andrews1977,
+  author = {Andrews, P and Tobien, H},
+  title = {New {M}iocene locality in Turkey with evidence on the origin of \textit{{R}amapithecus}
+	and \textit{{S}ivapithecus}},
+  journal = {Nature},
+  year = {1977},
+  volume = {268},
+  pages = {699},
+  number = {5622}
+}
+
+@Article{heizmann1980,
+  Title                    = {\textit{{P}rosansanosmilus peregrinus}, ein neuer machairodontider {F}elidae aus dem {M}ioz\"{a}n {D}eutschlands und {F}rankreichs},
+  Author                   = {E Heizmann and L Ginsburg and C Bulot},
+  Journal                  = {Stuttgarter Beitr. Naturk. B},
+  Year                     = {1980},
+  Pages                    = {1--27},
+  Volume                   = {58}
+}
+
+@Article{montoya2001,
+  Title                    = {\textit{{I}ndarctos} ({U}rsidae, {M}ammalia) from the {S}panish {T}urolian ({U}pper {M}iocene)},
+  Author                   = {Montoya, P and Alcal{\'a}, L and Morales, J},
+  Journal                  = {Scripta Geologica},
+  Year                     = {2001},
+  Pages                    = {123--151},
+  Volume                   = {122}
+}
+
+@Article{geraads2005,
+  Title                    = {Late Miocene large mammals from {Y}ulafli, {T}hrace region, {T}urkey, and their biogeographic implications},
+  Author                   = {Geraads, Denis and Kaya, Tanju and Mayda, Serdar and others},
+  Journal                  = {Acta Palaeontologica Polonica},
+  Year                     = {2005},
+  Number                   = {3},
+  Pages                    = {523--544},
+  Volume                   = {50}
+}
+
+@Article{baryshnikov2002,
+  Title                    = {Late {M}iocene \textit{{I}ndarctos punjabiensis atticus} ({C}arnivora, {U}rsidae) in {U}kraine with survey of \textit{{I}ndarctos} records from the former {USSR}},
+  Author                   = {Baryshnikov, Gennady F},
+  Journal                  = {Russian J. Theriol},
+  Year                     = {2002},
+  Number                   = {2},
+  Pages                    = {83--89},
+  Volume                   = {1}
+}
+
+@Article{jin2007,
+  Title                    = {The first skull of the earliest giant panda},
+  Author                   = {Jin, Changzhu and Ciochon, Russell L and Dong, Wei and Hunt, Robert M and Liu, Jinyi and Jaeger, Marc and Zhu, Qizhi},
+  Journal                  = PNAS,
+  Year                     = {2007},
+  Number                   = {26},
+  Pages                    = {10932--10937},
+  Volume                   = {104}
+}
+
+@Article{churcher1993,
+  Title                    = {\textit{{A}rctodus simus} from the {A}laskan {A}rctic slope},
+  Author                   = {Churcher, CS and Morgan, AV and Carter, LD},
+  Journal                  = {Canadian Journal of Earth Sciences},
+  Year                     = {1993},
+  Number                   = {5},
+  Pages                    = {1007--1013},
+  Volume                   = {30}
+}
+
+@Article{bjork1970,
+  Title                    = {The {C}arnivora of the {H}agerman local fauna (late {P}liocene) of {S}outhwestern Idaho},
+  Author                   = {Bjork, Philip Reese},
+  Journal                  = {Transactions of the American Philosophical Society},
+  Year                     = {1970},
+  Number                   = {7},
+  Pages                    = {3--54},
+  Volume                   = {60}
+}
+
+@Article{loreille2001,
+  Title                    = {Ancient {DNA} analysis reveals divergence of the cave bear, \textit{{U}rsus spelaeus}, and brown bear, \textit{{U}rsus arctos}, lineages},
+  Author                   = {Loreille, Odile and Orlando, Ludovic and Patou-Mathis, Maryl{\`e}ne and Philippe, Michel and Taberlet, Pierre and H{\"a}nni, Catherine},
+  Journal                  = {Current Biology},
+  Year                     = {2001},
+  Number                   = {3},
+  Pages                    = {200--203},
+  Volume                   = {11}
+}
+
+
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
