--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -5,7 +5,8 @@
 
 Exercise is in Section \ref{sect:RB-ExerciseMain}.
 
-\RevBayes \citep{Hoehna2016}
+\RevBayes \citep{Hoehna2016b}
+
 
 \subsection{Models}\label{subsect:Intro-Models}
 
@@ -23,6 +24,15 @@ The focus of this tutorial is to introduce you to specifying the models used in 
 \subsubsection{Lineage Diversification and Sampling}\label{subsub:Intro-FBD}
 
 Birth-death processes and FBD
+
+\begin{figure}[h!]
+\centering
+\fbox{\includegraphics[width=0.7\textwidth,angle=0]{\ResourcePath figures/tree_plot_with_fossils}}
+\caption{\small  }
+\label{fig:example-tree}
+\end{figure}
+
+
 
 \begin{figure}[h!]
 \centering
