--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9491,6 +9491,14 @@ They used a simple NNI for rooted trees},
   Volume                   = {11}
 }
 
+@Article{foote1996,
+  Title                    = {On the probability of ancestors in the fossil record},
+  Author                   = {Foote, Michael},
+  Journal                  = {Paleobiology},
+  Year                     = {1996},
+  Pages                    = {141--151},
+  Volume                   = {22}
+}
 
 
 @comment{jabref-meta: selector_publisher:}
