--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
@@ -11,7 +11,7 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Total-evidence Dating under the FBD Model}}\\\vspace{2mm}
+\textbf{\it{\Large Total-Evidence Analysis of Fossil and Extant Taxa under the Fossilized Birth-Death Process}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Tracy A. Heath, April Wright, and Walker Pett}
 \vspace{1cm}
