Reorganizing and revising TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/fbd_gm.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/fbd_gm.tex
@@ -1,8 +1,8 @@
 \begin{tikzpicture}
 \node[snode] (tree) at (1,1) {\LARGE $\mathcal{T}$};
-\node[snode] (lambda) at ($(tree)+(-0,4.5)$) {\LARGE $\lambda$};
-\node[snode] (mu) at ($(tree)+(2.5,3)$) {\LARGE $\mu$};
-\node[snode] (psi) at ($(tree)+(3.5,1)$) {\LARGE $\psi$};
+\node[snode] (lambda) at ($(tree)+(-3,2)$) {\LARGE $\lambda$};
+\node[snode] (mu) at ($(tree)+(1,3)$) {\LARGE $\mu$};
+\node[snode] (psi) at ($(tree)+(3,1.5)$) {\LARGE $\psi$};
 \node[constnode] (nul) at ($(lambda)+(-1.5,0)$) {\Large $\delta_{\lambda}$};
 \node[constnode] (num) at ($(mu)+(-1.5,0)$) {\Large $\delta_{\mu}$};
 \node[constnode] (nup) at ($(psi)+(1.5,0)$) {\Large $\delta_{\psi}$};
@@ -20,37 +20,17 @@
 \draw [taro] (nup) -- (psi);
 %\node at ($(nx)+(0,-1)$) {time tree};
 %\node at ($(nx)+(0,-1.75)$) {Node ages};
-\node[constnode] (rho) at ($(tree)+(4,-1.5)$) {\LARGE $\rho$};
+\node[constnode] (rho) at ($(tree)+(3.5,-1)$) {\LARGE $\rho$};
 \draw[taro] (rho) -- (tree) ;
 \node[white, fill=brnt, shape=rectangle, rounded corners] at ($(rho)+(0,-1)$) {sampling probability};
-\node[snode] (origin) at ($(tree)+(-3,2.5)$) {\large $\phi$};
+\node[snode] (origin) at ($(tree)+(-3,-1)$) {\large $\phi$};
 \node at ($(origin)+(0,0.75)$) {\scriptsize uniform};
 \draw[taro] (origin) -- (tree) ;
-\node[constnode] (min) at ($(origin)+(-2,0.75)$) {\large $\alpha$};
-\node[constnode] (max) at ($(origin)+(-2,-0.75)$) {\large $\beta$};
+\node[constnode] (min) at ($(origin)+(-2,0.75)$) {\large $a$};
+\node[constnode] (max) at ($(origin)+(-2,-0.75)$) {\large $b$};
 \draw[taro] (min) -- (origin) ;
 \draw[taro] (max) -- (origin) ;
-\node[white, fill=brnt, shape=rectangle, rounded corners] at ($(origin)+(0.6,0)$)[right] {origin time};
+\node[white, fill=brnt, shape=rectangle, rounded corners] at ($(origin)+(0,-1)$) {origin time};
 \node (ddd) at ($(tree)+(0,-3)$) {to the phyloCTMCs};
 \draw[dtaro] (tree) -- (ddd) ;
-\node[detnode] (offset) at ($(tree)+(-3.5,-2.5)$) {\large $t_i$};
-\node[white, fill=brnt, shape=rectangle, rounded corners] at ($(offset)+(0,-1)$) {fossil age};
-\node[obnode] (fossil) at ($(offset)+(-4,0)$) {\large $\mathcal{F}_i$};
-\node[detnode] (ai) at ($(fossil)+(2,0.75)$) {\large $x_i$};
-\node[detnode] (bi) at ($(fossil)+(2,-0.75)$) {\large $y_i$};
-\node[constnode] (mini) at ($(ai)+(0,1.5)$) {\large $a_i$};
-\node[constnode] (maxi) at ($(bi)+(0,-1.5)$) {\large $b_i$};
-\node at ($(mini)+(0,0.75)$) {\scriptsize observed min.};
-\node at ($(maxi)+(0,-0.75)$) {\scriptsize observed max.};
-\draw[dtaro] (tree) -- (offset) ;
-\draw[dtaro] (offset) -- (ai) ;
-\draw[dtaro] (offset) -- (bi) ;
-\draw[taro] (ai) -- (fossil) ;
-\draw[taro] (bi) -- (fossil) ;
-\draw[taro] (mini) -- (ai) ;
-\draw[taro] (maxi) -- (bi) ;
-\node at ($(fossil)+(0,0.75)$) {\scriptsize uniform};
-\node at ($(offset)+(0,0.75)$) {\scriptsize offset};
-\node[rectangle, dashed, very thick, inner sep=6mm, draw=black!100, fit=(fossil)(offset)(mini)(maxi)] (fossil_plate) {};
-\node[anchor=south east,inner sep=7pt] at (fossil_plate.south east) {\small $i \in N$};
 \end{tikzpicture}
