--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -8771,6 +8771,13 @@ Only done with MP!},
   Timestamp                = {2014.01.25}
 }
 
+@article{Warren2016,
+  title={rwty: R We There Yet},
+  author={Warren, DL and Geneva, A and Swofford, DL and Lanfear, R},
+  journal={A package for visualizing MCMC convergence in phylogenetics},
+  year={2016}
+}
+
 @Article{Waterman1978,
   Title                    = {{On the similarity of dendrograms}},
   Author                   = {Waterman, MS and Smith, TF},
@@ -8882,6 +8889,17 @@ Only done with MP!},
   Owner                    = {hoehna},
   Publisher                = {American Association for the Advancement of Science},
   Timestamp                = {2013.07.30}
+}
+
+@article{Wright2016,
+  Author                   = {Wright, April M. and Lloyd, Graeme T. and Hillis, David M.}, 
+  Title                    = {Modeling Character Change Heterogeneity in Phylogenetic Analyses of Morphology through the Use of Priors},
+  Journal                  = SYSBIO,
+  Year                     = {2016}
+  Number                   = {4},
+  Pages                    = {602-611},
+  Volume                   = {65}
+  
 }
 
 @Article{Wu2012,
